// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<FilePreviewGrid/> custom column headers 1`] = `
<div>
  <strong>
    File preview:
  </strong>
  <p
    class="margin-top"
  >
    <span>
      The 
      first 3 rows 
       of your data file
       
      are
       shown below.
    </span>
     
  </p>
  <div
    class="table-responsive"
  >
    <div
      class="grid-messages"
    />
    <table
      class="read-only-table table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col1"
          >
            <div
              class="grid-header-cell__body"
            >
              First Column
            </div>
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col2"
          >
            <div
              class="grid-header-cell__body"
            >
              Second Column
            </div>
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col3"
          >
            <div
              class="grid-header-cell__body"
            >
              Third Column
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="grid-row-alternate"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              abc
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              123
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              2019-01-01
            </div>
          </td>
        </tr>
        <tr
          class="grid-row"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              def
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              456
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              2019-01-02
            </div>
          </td>
        </tr>
        <tr
          class="grid-row-alternate"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              ghi
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              789
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              2019-01-03
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<FilePreviewGrid/> custom header and info message 1`] = `
<div>
  <strong>
    Custom Header
  </strong>
  <p
    class="margin-top"
  >
    <span>
      The 
      first 3 rows 
       of your data file
       
      are
       shown below.
    </span>
     
    Custom info message.
  </p>
  <div
    class="table-responsive"
  >
    <div
      class="grid-messages"
    />
    <table
      class="read-only-table table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col1"
          >
            <div
              class="grid-header-cell__body"
            >
              col1
            </div>
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col2"
          >
            <div
              class="grid-header-cell__body"
            >
              col2
            </div>
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col3"
          >
            <div
              class="grid-header-cell__body"
            >
              col3
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="grid-row-alternate"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              abc
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              123
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              2019-01-01
            </div>
          </td>
        </tr>
        <tr
          class="grid-row"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              def
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              456
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              2019-01-02
            </div>
          </td>
        </tr>
        <tr
          class="grid-row-alternate"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              ghi
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              789
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              2019-01-03
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<FilePreviewGrid/> error message 1`] = `
<div>
  <div
    class="alert alert-warning"
    role="alert"
  >
    Testing error message
  </div>
</div>
`;

exports[`<FilePreviewGrid/> error message with custom style 1`] = `
<div>
  <div
    class="alert alert-danger"
    role="alert"
  >
    Testing error message
  </div>
</div>
`;

exports[`<FilePreviewGrid/> no data 1`] = `
<div>
  <strong>
    File preview:
  </strong>
  <p
    class="margin-top"
  >
    <span>
      The 
      first 0 rows 
       of your data file
       
      are
       shown below.
    </span>
     
  </p>
  <div
    class="table-responsive"
  >
    <div
      class="grid-messages"
    />
    <table
      class="read-only-table table table-striped table-bordered"
    >
      <thead>
        <tr />
      </thead>
      <tbody>
        <tr
          class="grid-empty"
        >
          <td
            colspan="0"
          >
            No data available.
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<FilePreviewGrid/> one row of data 1`] = `
<div>
  <strong>
    File preview:
  </strong>
  <p
    class="margin-top"
  >
    <span>
      The 
      one row 
       of your data file
       
      is
       shown below.
    </span>
     
  </p>
  <div
    class="table-responsive"
  >
    <div
      class="grid-messages"
    />
    <table
      class="read-only-table table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            class="grid-header-cell"
            draggable="false"
            id="test"
          >
            <div
              class="grid-header-cell__body"
            >
              test
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="grid-row-alternate"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              123
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<FilePreviewGrid/> previewData.warningMsg 1`] = `
<div>
  <strong>
    File preview:
  </strong>
  <div
    class="margin-top alert alert-warning"
    role="alert"
  >
    Duplicate fields
  </div>
  <p
    class="margin-top"
  >
    <span>
      The 
      first 3 rows 
       of your data file
       
      are
       shown below.
    </span>
     
  </p>
  <div
    class="table-responsive"
  >
    <div
      class="grid-messages"
    />
    <table
      class="read-only-table table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col1"
          >
            <div
              class="grid-header-cell__body"
            >
              col1
            </div>
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col2"
          >
            <div
              class="grid-header-cell__body"
            >
              col2
            </div>
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col3"
          >
            <div
              class="grid-header-cell__body"
            >
              col3
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="grid-row-alternate"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              abc
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              123
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              2019-01-01
            </div>
          </td>
        </tr>
        <tr
          class="grid-row"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              def
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              456
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              2019-01-02
            </div>
          </td>
        </tr>
        <tr
          class="grid-row-alternate"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              ghi
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              789
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              2019-01-03
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<FilePreviewGrid/> three rows of data 1`] = `
<div>
  <strong>
    File preview:
  </strong>
  <p
    class="margin-top"
  >
    <span>
      The 
      first 3 rows 
       of your data file
       
      are
       shown below.
    </span>
     
  </p>
  <div
    class="table-responsive"
  >
    <div
      class="grid-messages"
    />
    <table
      class="read-only-table table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col1"
          >
            <div
              class="grid-header-cell__body"
            >
              col1
            </div>
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col2"
          >
            <div
              class="grid-header-cell__body"
            >
              col2
            </div>
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col3"
          >
            <div
              class="grid-header-cell__body"
            >
              col3
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="grid-row-alternate"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              abc
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              123
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              2019-01-01
            </div>
          </td>
        </tr>
        <tr
          class="grid-row"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              def
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              456
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              2019-01-02
            </div>
          </td>
        </tr>
        <tr
          class="grid-row-alternate"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              ghi
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              789
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              2019-01-03
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<FilePreviewGrid/> warning message 1`] = `
<div>
  <strong>
    File preview:
  </strong>
  <div
    class="margin-top alert alert-warning"
    role="alert"
  >
    Testing warning message
  </div>
  <p
    class="margin-top"
  >
    <span>
      The 
      first 3 rows 
       of your data file
       
      are
       shown below.
    </span>
     
  </p>
  <div
    class="table-responsive"
  >
    <div
      class="grid-messages"
    />
    <table
      class="read-only-table table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col1"
          >
            <div
              class="grid-header-cell__body"
            >
              col1
            </div>
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col2"
          >
            <div
              class="grid-header-cell__body"
            >
              col2
            </div>
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col3"
          >
            <div
              class="grid-header-cell__body"
            >
              col3
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="grid-row-alternate"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              abc
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              123
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              2019-01-01
            </div>
          </td>
        </tr>
        <tr
          class="grid-row"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              def
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              456
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              2019-01-02
            </div>
          </td>
        </tr>
        <tr
          class="grid-row-alternate"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              ghi
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              789
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              2019-01-03
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<FilePreviewGrid/> warning message and previewData.warningMsg 1`] = `
<div>
  <strong>
    File preview:
  </strong>
  <div
    class="margin-top alert alert-warning"
    role="alert"
  >
    Testing warning message
    Duplicate fields
  </div>
  <p
    class="margin-top"
  >
    <span>
      The 
      first 3 rows 
       of your data file
       
      are
       shown below.
    </span>
     
  </p>
  <div
    class="table-responsive"
  >
    <div
      class="grid-messages"
    />
    <table
      class="read-only-table table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col1"
          >
            <div
              class="grid-header-cell__body"
            >
              col1
            </div>
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col2"
          >
            <div
              class="grid-header-cell__body"
            >
              col2
            </div>
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col3"
          >
            <div
              class="grid-header-cell__body"
            >
              col3
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="grid-row-alternate"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              abc
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              123
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              2019-01-01
            </div>
          </td>
        </tr>
        <tr
          class="grid-row"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              def
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              456
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              2019-01-02
            </div>
          </td>
        </tr>
        <tr
          class="grid-row-alternate"
        >
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              ghi
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              789
            </div>
          </td>
          <td
            class="text-left"
          >
            <div
              class="table-cell-content"
            >
              2019-01-03
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
